.help-inline fix for vertical alignment

--- a/skin/frontend/bootstrapped/default/css/diff.css
+++ b/skin/frontend/bootstrapped/default/css/diff.css
@@ -99,3 +99,6 @@ header {
     float: left;
     display: block;
 }
+.help-inline{
+    margin-bottom: 9px;
+}
